Overhaul Android toolchain propagation, install logic, and apply code style
Build System Changes:
- Propagate CMAKE_TOOLCHAIN_FILE and Android flags (ABI, Platform, NDK) to ExternalProjects (Raylib, Zot, Memalloc) to ensure correct cross-compilation.
- Switch `grey` library target from SHARED to STATIC to simplify linking.
- Fix Android `native_app_glue` export logic: now correctly installs and exports the target for consumers.
- Manually install ExternalProject artifacts (.a files and headers) since they are not native CMake targets.
- Replace hardcoded `-lpthread` with portable `Threads::Threads`.
- Fix Address Sanitizer (ASan) configuration by passing flags to `target_link_libraries` instead of `target_link_options`.
- Bump project versions (Grey: 1.0.1, Greg: 2.0.1).

Code Style & formatting:
- Add `.clang-format` configuration (Google style, ColumnLimit 100, Right pointer alignment).
- Apply formatting to `physics_system.c`, component files, and CMake lists.

Refactoring & Fixes:
- physics: Refactor `ray_box_collision` to use `CHECK_AXIS_ALIGNMENT` macro for better readability.
- simd: Add fallback implementation of `vaddvq_f32` for ARM architectures lacking specific feature sets.

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(greg VERSION 2.0.0 DESCRIPTION "greg")
+project(
+  greg
+  VERSION 2.0.1
+  DESCRIPTION "greg")
 
 set(TARGET greg)
 
@@ -17,8 +20,11 @@ message(STATUS "System Processor: ${CMAKE_SYSTEM_PROCESSOR}")
 
 include(ExternalProject)
 
-list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/cmake/memalloc"
-  "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/cmake/zot")
+list(APPEND CMAKE_PREFIX_PATH
+     "${CMAKE_BINARY_DIR}/memalloc/${CMAKE_INSTALL_LIBDIR}/cmake/memalloc"
+     "${CMAKE_BINARY_DIR}/zot/${CMAKE_INSTALL_LIBDIR}/cmake/zot")
+
+find_package(Threads REQUIRED)
 
 find_package(grey QUIET)
 if(NOT TARGET grey::grey)
@@ -29,20 +35,24 @@ endif()
 include(sources.cmake)
 include(headers.cmake)
 
-add_executable(${TARGET} ${SOURCE_FILES} ${HEADER_FILES})
-target_include_directories(${TARGET}
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-target_link_libraries(${TARGET} PUBLIC pthread)
+if("${PLATFORM}" STREQUAL "Android" OR ANDROID)
+  set(PLATFORM Android)
+  add_library(${TARGET} SHARED ${SOURCE_FILES} ${HEADER_FILES})
+else()
+  add_executable(${TARGET} ${SOURCE_FILES} ${HEADER_FILES})
+endif()
+target_include_directories(
+  ${TARGET} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                   $<INSTALL_INTERFACE:include>)
+target_link_libraries(${TARGET} PUBLIC Threads::Threads)
 target_link_libraries(${TARGET} PUBLIC m)
 target_link_libraries(${TARGET} PRIVATE grey::grey)
 target_compile_features(${TARGET} PUBLIC c_std_23)
 
 include(CheckCCompilerFlag)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL
+                                        "RelWithDebInfo")
   if(MSVC)
     target_compile_options(${TARGET} PRIVATE /Zi /Od /RTC1)
     target_link_options(${TARGET} PRIVATE /DEBUG)
@@ -64,7 +74,8 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
 endif()
 
 if(NOT MSVC)
-  if((CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64"))
+  if((CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES
+                                              "aarch64"))
     check_c_compiler_flag("-mfpu=neon" HAS_NEON_FLAG)
     if(HAS_NEON_FLAG)
       target_compile_options(${TARGET} PRIVATE -mfpu=neon)
@@ -79,18 +90,20 @@ endif()
 
 include(GNUInstallDirs)
 
-install(TARGETS ${TARGET}
+install(
+  TARGETS ${TARGET}
   EXPORT GregTargets
   DESTINATION ${CMAKE_INSTALL_BINDIR}
-  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+  INCLUDES
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(FILES ${HEADER_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-install(EXPORT GregTargets
+install(
+  EXPORT GregTargets
   FILE greg-config.cmake
   NAMESPACE greg::
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/greg)
 
-export(EXPORT GregTargets
-  FILE "${CMAKE_BINARY_DIR}/greg-config.cmake")
+export(EXPORT GregTargets FILE "${CMAKE_BINARY_DIR}/greg-config.cmake")
