--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -47,7 +47,7 @@ if(NOT TARGET memalloc::memalloc)
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/memalloc
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
-               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} ${COMMON_TOOLCHAIN_ARGS}
+               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
@@ -78,7 +78,7 @@ if(NOT TARGET zot::zot)
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/zot
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
-               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} ${COMMON_TOOLCHAIN_ARGS}
+               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
@@ -124,7 +124,7 @@ if(NOT TARGET raylib::raylib)
     GIT_CLONE_DEPTH 1
     INSTALL_DIR ${CMAKE_BINARY_DIR}/raylib
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXAMPLES=OFF
-               -DBUILD_SHARED_LIBS=OFF ${RAYLIB_EXTRA_ARGS}
+               -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${RAYLIB_EXTRA_ARGS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
