Add `-fPIC` to static compilation of grey

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -47,7 +47,8 @@ if(NOT TARGET memalloc::memalloc)
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/memalloc
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
-               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
+               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+               -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
@@ -78,7 +79,8 @@ if(NOT TARGET zot::zot)
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/zot
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
-               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
+               -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+               -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${COMMON_TOOLCHAIN_ARGS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
@@ -124,7 +126,8 @@ if(NOT TARGET raylib::raylib)
     GIT_CLONE_DEPTH 1
     INSTALL_DIR ${CMAKE_BINARY_DIR}/raylib
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXAMPLES=OFF
-               -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON ${RAYLIB_EXTRA_ARGS}
+               -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON
+               ${RAYLIB_EXTRA_ARGS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
@@ -168,9 +171,10 @@ include(sources.cmake)
 include(headers.cmake)
 
 if("${PLATFORM}" STREQUAL "Android")
-add_library(${TARGET} STATIC ${SOURCE_FILES} ${HEADER_FILES})
+  add_library(${TARGET} STATIC ${SOURCE_FILES} ${HEADER_FILES})
+  target_compile_options(${TARGET} PRIVATE -fPIC)
 else()
-add_library(${TARGET} SHARED ${SOURCE_FILES} ${HEADER_FILES})
+  add_library(${TARGET} SHARED ${SOURCE_FILES} ${HEADER_FILES})
 endif()
 add_library(grey::${TARGET} ALIAS ${TARGET})
 
