Add more accurate install directories to cmakelists

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -42,7 +42,8 @@ if(NOT TARGET memalloc::memalloc)
   message(STATUS "memalloc not found, adding as ExternalProject")
   ExternalProject_Add(
     MemAlloc
-    GIT_REPOSITORY "https://github.com/iudah/memalloc.git"
+    # GIT_REPOSITORY "https://github.com/iudah/memalloc.git"
+    SOURCE_DIR "/data/data/com.termux/files/home/storage/shared/Jay/memalloc"
     GIT_TAG origin/master
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/memalloc
@@ -74,7 +75,8 @@ if(NOT TARGET zot::zot)
   message(STATUS "zot not found, adding as ExternalProject")
   ExternalProject_Add(
     zot
-    GIT_REPOSITORY "https://github.com/iudah/zot.git"
+    SOURCE_DIR "/data/data/com.termux/files/home/storage/shared/Jay/zot"
+    # GIT_REPOSITORY "https://github.com/iudah/zot.git"
     GIT_TAG origin/main
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/zot
@@ -121,7 +123,8 @@ if(NOT TARGET raylib::raylib)
 
   ExternalProject_Add(
     raylib
-    GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+    # GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+    SOURCE_DIR "/data/data/com.termux/files/home/storage/shared/Jay/raylib"
     GIT_SHALLOW TRUE
     GIT_CLONE_DEPTH 1
     INSTALL_DIR ${CMAKE_BINARY_DIR}/raylib
@@ -280,6 +283,8 @@ install(
   TARGETS ${TARGET}
   EXPORT GreyTargets
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   INCLUDES
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
@@ -288,6 +293,8 @@ if("${PLATFORM}" STREQUAL "Android")
     TARGETS native_app_glue
     EXPORT GreyTargets
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     INCLUDES
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 endif()
