--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -93,7 +93,9 @@ include(GNUInstallDirs)
 install(
   TARGETS ${TARGET}
   EXPORT GregTargets
-  DESTINATION ${CMAKE_INSTALL_BINDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   INCLUDES
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
